package ar.edu.utn.frba.dds.validacion;

import java.util.ArrayList;
import java.util.List;

public class ObtenerTopPeoresPasswordsURL implements ObtenerListaString {
  private String url;
  private List<String> lista;

  @Override
  public List<String> obtenerLista(){
    //TODO: IMPLEMENTAR API
    return new ArrayList<String>();
  }
}
